1.修复过时方法