@@ -2,19 +2,20 @@ package com.podigua.kafka.core.utils;
 
 import com.podigua.kafka.visark.setting.SettingClient;
 import javafx.fxml.FXMLLoader;
-import javafx.util.Callback;
 
 import java.io.IOException;
-import java.lang.reflect.Constructor;
 import java.net.URL;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 
 /**
+ * 资源
  *
- **/
+ * @author podigua
+ * @date 2024/10/24
+ */
 public class Resources {
-    private final static Map<Class<?>, Object> CACHE = new ConcurrentHashMap();
+    private final static Map<Class<?>, Object> CACHE = new ConcurrentHashMap<>();
 
     public static URL getResource(String name) {
         return Resources.class.getResource(name);
@@ -28,22 +29,17 @@ public class Resources {
      */
     public static FXMLLoader getLoader(String path) {
         FXMLLoader loader = new FXMLLoader(Resources.getResource(path));
-        loader.setControllerFactory(new Callback<Class<?>, Object>() {
-            @Override
-            public Object call(Class<?> clazz) {
-                Object o = CACHE.get(clazz);
-                if(o==null){
-                    try {
-                        o=clazz.newInstance();
-                        CACHE.put(clazz,o);
-                    } catch (InstantiationException e) {
-                        throw new RuntimeException(e);
-                    } catch (IllegalAccessException e) {
-                        throw new RuntimeException(e);
-                    }
+        loader.setControllerFactory(clazz -> {
+            Object o = CACHE.get(clazz);
+            if (o == null) {
+                try {
+                    o = clazz.getDeclaredConstructor().newInstance();
+                    CACHE.put(clazz, o);
+                } catch (Exception e) {
+                    throw new RuntimeException(e);
                 }
-                return o;
             }
+            return o;
         });
         loader.setResources(SettingClient.bundle());
         try {
